# 2048former

./: .gitignore  AGENTS.md  Cargo.toml  README.md  argmax-logs.txt  disagreements.jsonl  main.py  outliers_500k_report.txt  pyproject.toml
benchmarks/: bench_client_server.py  policy_argmax_agreement.py  probe_server_legal.py  server_client_agreement.py  test_e2e_macroxue.py  test_invariants.py  top-score.py  value_head_eval.py
config/: config.example.toml  long-ctxt-32bin.toml  long-ctxt-sft.toml  top-score-benchmark.toml
config/inference/: hard-move-argmax.udlr.toml  hard-move-softmax.udlr.toml  orchestrator.toml  softmax.udlr.v2.toml  tail-agg-conf-refine.grid.toml  tail-agg-conf.grid.toml  tail-agg-conf.sweep.udlr.toml  tail-agg-conf.udlr.toml  tail-agg.p2p3.sweep.udlr.toml  top-score-small.toml  top-score.toml  v2-hard_target-baseline.toml
config/midtraining/: 50m-d6-rejection.toml  50m-d8.toml
config/pretraining/: long-ctxt-32bin.toml  v1-100m.toml  v1-ablation-10m.toml  v1-hard-10m.toml  v1-tsad-10m.toml
config/pretraining/v2/: 10m-100k-ablation.toml  10m-100k-hard-move.toml  10m-50k-ablation-macroxue-v2.toml  50m-hard-move-continue.toml  50m-hard-move.toml  50m-yolo.toml  debugging.toml
config/pretraining/v2/ablation/: 10m-100k-ablation-macroxue-v2-valuehead.toml  10m-100k-ablation-macroxue-v2.toml  150m-100k-ablation-macroxue-v2.toml  50m-100k-ablation-macroxue-v2-attn-pool-shared.toml  50m-100k-ablation-macroxue-v2-valuehead.toml  50m-100k-ablation-macroxue-v2.toml  50m-100k-attn-sink-expt-muon.toml  50m-100k-attn-sink-expt.toml  50m-100k-attn-sink-ww1.toml  50m-100k-attn-sink-ww10.toml  50m-100k-attn-sink-ww2.toml  50m-100k-attn-sink-ww5-smoke-10.toml  50m-100k-attn-sink-ww5.toml  50m-500k-attn-sink-ww1-resume.toml
config/pretraining/v2/attn-sink/: 50m-100k-attn-sink-cursed.toml
config/pretraining/v2/full_length/: 10m_n3_5-binned.toml  10m_n3_5-binned_panic.toml  50m-1m_steps.toml  50m-3m_steps.toml  narrow_n3_5-2epoch-cosine.toml
config/rollout/: collect-10m.toml  collect-1b.toml  collect-50m-v2-hard.toml
config/sft/value_head/: 50m-ce-prepool-ablation.toml  50m-ce-prepool-resume.toml  50m-mse-100k_steps.toml
config/value_head/: quantile_stratified.toml
crates/annotation-server/: Cargo.toml
crates/annotation-server/src/: app.rs  args.rs  main.rs  routes.rs  student.rs
crates/dataset-packer/: Cargo.toml  README.md
crates/dataset-packer/src/: lib.rs  macroxue.rs  merge.rs  schema.rs  selfplay.rs  valuation.rs  value.rs  writer.rs
crates/dataset-packer/src/macroxue/: board_eval.rs  tokenizer.rs
crates/game-engine/: CONFIG.md  Cargo.toml  README.md  build.rs
crates/game-engine/src/: actor.rs  annotation.rs  config.rs  ds_writer.rs  feeder.rs  grpc.rs  lib.rs  main.rs  pipeline.rs  recorder.rs
crates/game-engine/src/actor/: mod.rs  strategies.rs
crates/twenty48-utils/: Cargo.toml
crates/twenty48-utils/src/: lib.rs
crates/twenty48-utils/src/engine/: mod.rs  ops.rs  state.rs  tables.rs
crates/twenty48-utils/src/macroxue/: mod.rs
docs/: afterstate-ev-tokenization-proposal.md  board-annotation.md  board-rotation-augment.md  high_throughput_2048_inference_engine_minimal_fast_and_finishable.md  inference-engine.md  macroxue_valuations.md  profiling.md  reference-attention-sink.py  reference-ds-writer.rs  reference-evaluation.py  self-play-v1.md  value-head.md  value_head.md
docs/macroxue_data/: data_format.md  legacy_tokenization.md  tokenization.md  tokenization_v2.md  valuation.md
proto/: README.md  buf.yaml
proto/train_2048/inference/v1/: inference.proto
scripts/: analyze_scores.py  analyze_scores_with_plot.py  compute-perplexity.md  compute_perplexity.py  compute_perplexity_tui.py  dump-activations.md  dump_activations.py
scripts/interp/: README.md  check_rmsnorm_gammas.py  count_outliers.py  plot_attention_matrices.py
src/train_2048/: __init__.py  config.py  dataloader.py  inference.py  model.py  train.py
src/train_2048/dataloader/: __init__.py  jsonl.py  pack.py
src/train_2048/inference/: __init__.py  adapters.py  core.py  engine.py  selection.py
ui/annotation-viewer/: README.md  index.html  package-lock.json  package.json
ui/annotation-viewer/src/: App.css  App.tsx  index.css  main.tsx
ui/annotation-viewer/src/components/: MoveInsights.module.css  MoveInsights.tsx  RunsSidebar.tsx  TokenizationControls.tsx
ui/annotation-viewer/src/hooks/: useViewerPreferences.ts
ui/annotation-viewer/src/lib/: insightRow.ts
ui/annotation-viewer/src/lib/api/: client.ts  errors.ts  queries.ts  schemas.ts
