[project]
name = "train-2048-workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "train_2048",
    "infer-2048",
    "numpy>=2.3.2",
    "grpcio>=1.74.0",
]

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
train_2048 = { workspace = true }
infer-2048 = { workspace = true }
