[package]
name = "dataset-packer"
version = "0.1.0"
edition = "2024"

[lib]
name = "dataset_packer"
path = "src/lib.rs"

[[bin]]
name = "dataset-packer"
path = "src/bin/main.rs"

[dependencies]
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
env_logger = "0.11.8"
flate2 = "1.0.35"
indicatif = "0.17.8"
log = "0.4.28"
npyz = { version = "0.8.4", features = ["derive"] }
parking_lot = "0.12.3"
rayon = "1.11.0"
rusqlite = { version = "0.37.0", features = ["bundled"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"
tempfile = "3.22.0"
walkdir = "2.5.0"
half = { version = "2.4.1", features = ["serde"] }
