[package]
name = "game-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
ai-2048 = { git = "https://github.com/EndlessReform/2048_bench.git", rev = "e517db6"}
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
prost = "0.14.1"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = "1.47.1"
toml = "0.9.5"
tonic = "0.14.2"
tonic-prost = "0.14.2"

[build-dependencies]
tonic-prost-build = "0.14.2"
