[package]
name = "game-engine"
version = "0.1.0"
edition = "2024"

[lib]
name = "game_engine"
path = "src/lib.rs"

[[bin]]
name = "game-engine"
path = "src/main.rs"

[[bin]]
name = "annotation-engine"
path = "src/bin/annotate.rs"

[dependencies]
ai-2048 = { git = "https://github.com/EndlessReform/2048_bench.git", rev = "e517db6" }
anyhow = "1.0.99"
clap = { version = "4.5.47", features = ["derive"] }
prost = "0.14.1"
rayon = "1.11.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.47.1", features = ["fs"] }
toml = "0.9.5"
tonic = "0.14.2"
tonic-prost = "0.14.2"
rand = { version = "0.8.5", features = ["std_rng"] }
tower = "0.5.2"
hyper-util = { version = "0.1.7", features = ["tokio"] }
rusqlite = { version = "0.37.0", features = ["bundled"] }
npyz = { version = "0.8.4", features = ["derive"] }
bytemuck = { version = "1.18.0", features = ["extern_crate_std"] }
log = "0.4.28"
env_logger = "0.11.8"
tokio-util = "0.7.16"
dataset-packer = { path = "../dataset-packer" }
futures = "0.3.31"
indicatif = "0.17.8"

[build-dependencies]
tonic-prost-build = "0.14.2"

[dev-dependencies]
tempfile = "3.10.1"
